package de.dhbw.karlsruhe.getraenkeabrechnung.io2;

public interface Reader {
    String readLine();
}
